--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+<meta charset="utf-8"/>
+<title>我的第一个网页</title>
+</head>
+<body>
+<h1>传奇的我</h1>
+<h2>基本信息</h2>
+<p>侯士杰，汉族，男，20岁，单身，现就读于北京大学药学院。身材魁梧，体格健壮，乐观开朗，善良真诚。爱好中国象棋，乒乓球，三国杀等。乐于交友，来（mei）着（zi）不拒哦。</p>
+<h2>曾获奖项</h2>
+<p>2016年内蒙古中国象棋少年锦标赛A组亚军并评为“地方大师”等级</p>
+<img src="奖项/地方大师.jpg"/>
+<p>2017年全国业余棋王赛内蒙古赛区少年男子组棋王(并代表内蒙古赛区出战天津全运会)</p>
+<img src="奖项/棋王.jpg"/>
+<img src="奖项/奖杯.jpg"/>
+<p>2017年内蒙古自治区三好学生</p>
+<img src="奖项/三好学生正面.jpg"/>
+<img src="奖项/三好学生反面.jpg"/>
+<p>2019年全国化学竞赛省级二等奖</p>
+<img src="奖项/化学竞赛.jpg"/>
+<h3>现状</h3>
+<p>现在呢，俺在北大本部读医学预科，明年就要回医学部咯。俺在努力完成学业的同时，参加了学校的散打社与象棋社团，并准备成为为象棋队的一员，为学校争得荣誉！</p>
+</body>
+</html>
